# endspiel

./: .gitignore  ABOUT.md  Cargo.toml  DEVELOPMENT.md  README.md  TRAINING.md
.github/workflows/: ci.yml  release.yml
crates/chess-common/: Cargo.toml
crates/chess-common/src/: board.rs  fen.rs  lib.rs  moves.rs  pgn.rs  types.rs
crates/chess-core/: Cargo.toml
crates/chess-core/src/: attacks.rs  lib.rs  magics.rs  movegen.rs  san.rs  validate.rs
crates/chess-datagen/: Cargo.toml
crates/chess-datagen/src/: game.rs  main.rs
crates/chess-engine/: Cargo.toml
crates/chess-engine/src/: eval.rs  lib.rs  polyglot.rs  search.rs  see.rs  syzygy.rs  threads.rs  tt.rs
crates/chess-nnue/: Cargo.toml  build.rs
crates/chess-nnue/src/: accumulator.rs  features.rs  inference.rs  lib.rs  network.rs
crates/chess-tuner/: Cargo.toml
crates/chess-tuner/src/: main.rs
crates/chess-uci/: Cargo.toml
crates/chess-uci/src/: handler.rs  lib.rs  protocol.rs
scripts/: analyze_themes.py  download_syzygy.sh  extract_endgame_fens.py  extract_midgame_fens.py  fastchess_latest.sh  next_round_pipeline.sh  prepare_archive.sh  solve_puzzles.py  spsa.py  sweep_checkpoints.sh
skills/GitHub/: SKILL.md
src/: main.rs
train/: Cargo.toml  best_checkpoint.py  clean_data.rs  convert.rs  extract_fens.rs  main.rs  opening_diversity.rs  quality_check.rs
train/.cargo/: config.toml
