[package]
name = "chess-tuner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "chess-tuner"
path = "src/main.rs"

[dependencies]
chess-common.workspace = true
chess-core.workspace = true
chess-engine.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zstd = "0.13.3"
rayon = "1.12.0"
